log
Wed 24 Apr 2024 05:55:27 PM UTC: 
 hashmap.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:10: error: unused variable ‘newArray’ [-Werror=unused-variable]
   71 |   Pair** newArray = (Pair**)malloc(newCapacity * sizeof(Pair**));
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50feaef
Wed 24 Apr 2024 05:56:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8c9474f
Wed 24 Apr 2024 06:03:07 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|0
9fe68fa
Wed 24 Apr 2024 06:06:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f6141e7
Wed 24 Apr 2024 06:08:52 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4592e4a
Wed 24 Apr 2024 06:10:29 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
eb7c94f
Wed 24 Apr 2024 06:14:56 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
5013ca5
Wed 24 Apr 2024 06:15:15 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|3
total_score: 40/70
7289973
Wed 24 Apr 2024 06:18:15 PM UTC: 
 hashmap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
7e08732
Wed 24 Apr 2024 06:20:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:116:3: error: expected ‘,’ or ‘;’ before ‘if’
  116 |   if (map->buckets[pos]->key == key){
      |   ^~
hashmap.c:115:7: error: unused variable ‘pos’ [-Werror=unused-variable]
  115 |   int pos = get_valid_location(map, key)
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
30d158e
Wed 24 Apr 2024 06:20:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7e4bf0c
Wed 24 Apr 2024 06:21:03 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
  119 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e7b9190
Wed 24 Apr 2024 06:21:19 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:119:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
  119 |   else;
      |   ^~~~
hashmap.c:120:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
  120 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
adc6430
Wed 24 Apr 2024 06:21:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
adc6430
Wed 24 Apr 2024 06:44:25 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
c5dba49
Wed 24 Apr 2024 06:45:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
e861e4a
Thu 25 Apr 2024 02:57:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
522e0e0
Thu 25 Apr 2024 02:57:52 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ed5fcb4
Thu 25 Apr 2024 02:58:34 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4dcd2c4
Thu 25 Apr 2024 02:59:18 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
7470e36
Thu 25 Apr 2024 02:59:42 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
040d68a
Thu 25 Apr 2024 03:09:29 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:109:7: error: unused variable ‘pos’ [-Werror=unused-variable]
  109 |   int pos = get_valid_location(map, key);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
d933fd0
Thu 25 Apr 2024 03:09:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
ff8b939
Thu 25 Apr 2024 03:10:39 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|3
total_score: 40/70
a0c3b64
Thu 25 Apr 2024 03:11:50 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 40/70
ac98c00
Thu 25 Apr 2024 03:18:42 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
1dea56a
Thu 25 Apr 2024 03:21:35 AM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
bac568b
Thu 25 Apr 2024 03:22:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
31dd869
Thu 25 Apr 2024 03:22:43 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|2
total_score: 50/70
2092e31
Thu 25 Apr 2024 03:25:39 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
361588f
Thu 25 Apr 2024 03:26:25 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
222c764
Thu 25 Apr 2024 03:26:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
4bf5d3a
Thu 25 Apr 2024 03:27:01 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 50/70
51434c1
Thu 25 Apr 2024 03:28:15 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|2
total_score: 50/70
ecdcdfc
Thu 25 Apr 2024 03:28:46 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
7b63651
Thu 25 Apr 2024 03:29:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
00eb796
Thu 25 Apr 2024 03:32:34 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
e03c21b
Thu 25 Apr 2024 03:33:14 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:115:30: error: statement with no effect [-Werror=unused-value]
  115 |       map->buckets[pos]->key == NULL;
      |                              ^
cc1: all warnings being treated as errors
Compilation failed
44dbb5c
Thu 25 Apr 2024 03:33:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
209477b
Thu 25 Apr 2024 03:33:35 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
ae9d6d4
Fri 26 Apr 2024 06:48:26 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  13|1
total_score: 60/70
ec40f47
Fri 26 Apr 2024 06:51:17 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:149:1: error: control reaches end of non-void function [-Werror=return-type]
  149 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a228187
Fri 26 Apr 2024 06:51:56 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|1
total_score: 60/70
8c1865c
Fri 26 Apr 2024 07:05:27 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|1
total_score: 60/70
dbf8d46
Fri 26 Apr 2024 07:19:12 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
26d52d8
Fri 26 Apr 2024 07:20:22 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  12|1
total_score: 60/70
9690259
Fri 26 Apr 2024 07:20:46 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|1
total_score: 60/70
cb358a3
Fri 26 Apr 2024 07:26:43 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  13|1
total_score: 60/70
85fd735
Fri 26 Apr 2024 07:29:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
03640b7
Fri 26 Apr 2024 07:37:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
991214f
Fri 26 Apr 2024 07:51:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
0f02efd
Fri 26 Apr 2024 08:04:08 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
e776ca1
Sat 27 Apr 2024 02:08:42 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:149:1: error: control reaches end of non-void function [-Werror=return-type]
  149 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6144528
Sat 27 Apr 2024 02:09:00 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|1
total_score: 60/70
057043d
